# rostanke

./: README.md
rostanke_description/: CMakeLists.txt  package.xml
rostanke_description/config/: sensors.yaml  tanke.yaml  wheelbl.yaml  wheelbr.yaml  wheelfl.yaml  wheelfr.yaml
rostanke_description/launch/: view_platform.launch  view_rostanke.launch
rostanke_description/meshes/: m1.stl  m4.stl
rostanke_description/meshes/plataforma/: finalcarrera1.stl  finalcarrera2.stl  motor_eje1.stl  motor_eje2.stl  plat00.stl  plat00A.stl  plat00B.stl  plat01.stl  plat01B.stl  plat03.stl  plat03A.stl
rostanke_description/meshes/wheel/wheelbl/: base_wheel.stl  chasis_wheel1.stl  chasis_wheel2.stl  wheel1.stl  wheel10.stl  wheel2.stl  wheel3.stl  wheel4.stl  wheel5.stl  wheel6.stl  wheel7.stl  wheel8.stl  wheel9.stl
rostanke_description/meshes/wheel/wheelbr/: base_wheel.stl  chasis_wheel1.stl  chasis_wheel2.stl  wheel1.stl  wheel10.stl  wheel2.stl  wheel3.stl  wheel4.stl  wheel5.stl  wheel6.stl  wheel7.stl  wheel8.stl  wheel9.stl
rostanke_description/meshes/wheel/wheelfl/: base_wheel.stl  chasis_wheel1.stl  chasis_wheel2.stl  wheel1.stl  wheel10.stl  wheel2.stl  wheel3.stl  wheel4.stl  wheel5.stl  wheel6.stl  wheel7.stl  wheel8.stl  wheel9.stl  wheel_aux.stl
rostanke_description/meshes/wheel/wheelfr/: base_wheel.stl  chasis_wheel1.stl  chasis_wheel2.stl  wheel1.stl  wheel10.stl  wheel2.stl  (+7 more)
rostanke_description/rviz/: rostanke_description.rviz
rostanke_description/urdf/: gazebo.xacro  materials.xacro  tanke.common.urdf.xacro  tanke.urdf.xacro  wheel_base.xacro
(+10 files in other folders)
